--- a/wallet-connection-app/src/App.css
+++ b/wallet-connection-app/src/App.css
@@ -1,58 +1,23 @@
-/* .App {
-  text-align: center;
+.App {
+  font-family: Arial, sans-serif;
+  color: #333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header,
+.token-list,
+.watchlist,
+.wallet-connector,
+.account-balance,
+.search-bar,
+.token-detail,
+.home-page {
+  margin: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-
-.app {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  color: white;
-  background-color: #1b1b1b;
-}
-
-.app-body {
-  display: flex;
-  flex: 1;
-}
-
-.content {
-  flex: 1;
-  padding: 20px;
-  overflow-y: auto;
+input {
+  padding: 5px;
 }
