--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -9,9 +9,9 @@
 
 .suggestions {
   border: 1px solid #ccc;
-  max-height: 200px; /* Keep the vertical scroll hidden until necessary */
-  overflow-y: auto; /* Allow vertical scroll only when needed */
-  overflow-x: hidden; /* Prevent horizontal scroll */
+  max-height: 200px;
+  overflow-y: auto; 
+  overflow-x: hidden; 
   padding: 0;
   margin-top: 5px;
   list-style-type: none;
@@ -30,8 +30,8 @@
   padding: 10px;
   cursor: pointer;
   justify-content: space-between;
-  width: calc(100% - 9px); /* Ensure no horizontal scroll by adjusting the width */
-  margin: 1px 0 0 1px; /* 1px from top and left border */
+  width: calc(100% - 9px); 
+  margin: 1px 0 0 1px; 
 }
 
 .suggestions li.active {
