--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* src/index.css */
 
 :root {
-  --background-color: #ffffff;
+  --background-color: #141618;
   --text-color: #333333;
   --link-color: #1a0dab;
   --button-bg: #4bc0c0;
