--- a/src/components/WatchList/WatchList.css
+++ b/src/components/WatchList/WatchList.css
@@ -1,10 +1,7 @@
 .watchlist-container {
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #ffffff;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 0px 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .watchlist-container h2 {
@@ -12,53 +9,79 @@
   font-size: 24px;
   margin-bottom: 20px;
   color: #333;
+  font-weight: bold;
 }
 
-/* Watchlist table */
 .watchlist-table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
 .watchlist-table th,
 .watchlist-table td {
-  border: 1px solid #ddd;
-  padding: 12px;
+  padding: 16px 20px;
   text-align: center;
   vertical-align: middle;
+  font-size: 18px;
+  font-weight: 600;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 .watchlist-table th {
-  background-color: #f4f4f4;
-  font-weight: bold;
-  color: #555;
+  color: #007bff;
+  text-transform: uppercase;
+  border-bottom: 2px solid #007bff; 
+}
+
+.watchlist-table td {
+  color: #ffffffdc;
+}
+
+.watchlist-table tr:last-child td {
+  border-bottom: none;
 }
 
 .watchlist-table tr:hover {
-  background-color: #f9f9f9;
+  background-color: #1A1A1A;
 }
 
-/* Coin Info */
+.coin-section {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.coin-symbol {
+  padding-top: 5px;
+  color: #BBC0C5;
+}
+
 .coin-info {
   display: flex;
   align-items: center;
 }
 
 .coin-icon {
-  width: 25px;
-  height: 25px;
-  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  margin-right: 12px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
 }
 
-/* Buttons */
 .view-data-button,
 .delete-button {
-  padding: 5px 12px;
+  padding: 8px 14px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
 }
 
 .view-data-button {
@@ -72,9 +95,8 @@
 
 .delete-button {
   background-color: transparent;
-  color: red;
+  color: #BF4024;
   font-size: 16px;
-  border: none;
   cursor: pointer;
 }
 
@@ -83,33 +105,32 @@
 }
 
 .delete-button:hover {
+  color: #e60000;
   opacity: 0.8;
 }
 
-/* Sparkline */
 .sparklines-line {
   stroke-width: 2;
 }
 
-/* Responsive Design */
 @media (max-width: 768px) {
   .watchlist-container {
-    padding: 10px;
+    padding: 15px;
   }
 
   .watchlist-table th,
   .watchlist-table td {
-    padding: 8px;
-    font-size: 12px;
+    padding: 12px 14px;
+    font-size: 16px;
   }
 
   .coin-icon {
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
   }
 
   .view-data-button,
   .delete-button {
-    padding: 4px 8px;
+    padding: 6px 10px;
   }
 }
