--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 .homepage-container {
-  padding: 20px;
+  padding: 5px 40px;
   font-family: Arial, sans-serif;
 }
 
@@ -11,7 +11,7 @@
 
 .wallet-info h2 {
   font-size: 18px;
-  color: #333;
+  color: #26292C;
 }
 
 .wallet-info h1 {
@@ -21,20 +21,40 @@
 
 .tab-navigation {
   display: flex;
+  justify-content: flex-start;
+  border-bottom: 1px solid #333;
   margin-top: 20px;
 }
 
 .tab-button {
-  padding: 10px 20px;
-  margin-right: 10px;
-  background-color: #f0f0f0;
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFFFFF;
+  background: none;
   border: none;
+  padding: 10px 20px;
   cursor: pointer;
+  position: relative;
+  margin-right: 20px;
+}
+
+.tab-button:hover {
+  color: #00aaff;
 }
 
 .tab-button.active {
-  background-color: #4CAF50;
-  color: white;
+  color: #00aaff;
+}
+
+.tab-button.active::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: #00aaff;
+  width: 100%;
 }
 
 .tab-content {
