--- a/src/components/AddTokensModal/AddTokensModal.css
+++ b/src/components/AddTokensModal/AddTokensModal.css
@@ -1,39 +1,272 @@
-.add-tokens-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.6); 
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.add-modal-content strong {
+  color: #ddd;
+  font-weight: bold;
+}
+
+
+.add-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.add-modal-content {
+  background-color: #26292C;
+  width: 80%;
+  max-width: 800px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  color: #333;
+  font-family: Arial, sans-serif;
+}
+
+.add-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.add-modal-header h2 {
+  font-size: 24px;
+  color: #f5f5f5;
+}
+
+.add-modal-close-button {
+  font-size: 28px;
+  cursor: pointer;
+  color: #f5f5f5;
+}
+
+.add-modal-search-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.add-modal-search-input {
+  flex-grow: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.add-modal-tabs {
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 1px solid #333;
+  margin-top: 20px;
+}
+
+.add-modal-tab {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFFFFF;
+  background: #26292C;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  position: relative;
+  margin-right: 20px;
+}
+
+.add-modal-tab:hover {
+  color: #00aaff;
+}
+
+.add-modal-tab.active {
+  color: #00aaff;
+}
+
+.add-modal-tab.active::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: #00aaff;
+  width: 100%;
+}
+
+.add-modal-main {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.add-modal-coin-list {
+  width: 45%;
+  max-height: 400px;
+  overflow-y: auto;
+  border-right: 1px solid #ddd;
+  padding-right: 20px;
+}
+
+.add-modal-coin-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.add-modal-coin-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.add-modal-coin-item:hover,
+.add-modal-coin-item.selected {
+  /* background-color: #f0f0f0; */
+}
+
+.add-modal-coin-logo {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+}
+
+.add-modal-coin-name {
+  flex-grow: 1;
+  font-weight: bold;
+  color: #f5f5f5;
+}
+
+.add-modal-coin-symbol {
+  color: #666;
+  margin-left: 5px;
+  font-weight: normal;
+}
+
+.add-modal-favorite-star {
+  margin-left: auto;
+  cursor: pointer;
+  font-size: 20px;
+  color: #ff9800;
+}
+
+.add-modal-coin-details {
+  width: 50%;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.add-modal-coin-detail {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 5px;
+  font-size: 16px;
+}
+
+.add-modal-coin-detail.positive {
+  color: #28a745;
+}
+
+.add-modal-coin-detail.negative {
+  color: #BF4024;
+}
+
+.add-modal-coin-detail.graph {
+  margin-bottom: 16px;
+}
+
+.chart {
+  background-color: #f5f5f5;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.add-modal-select-message {
+  text-align: center;
+  color: #777;
+  font-size: 16px;
+}
+
+.add-modal-coin-detail-value{
+  color: #ccc;
+}
+
+.coin-modal-graph{
+  display: flex;
+  justify-content: center;
+}
+
+.add-modal-coin-list::-webkit-scrollbar,
+.add-modal-coin-details::-webkit-scrollbar {
+  width: 5px;
+}
+
+.add-modal-coin-list::-webkit-scrollbar-thumb,
+.add-modal-coin-details::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .add-modal-content {
+    width: 90%;
+    padding: 15px;
   }
-  
-  .add-tokens-modal-content {
-    background-color: #24272A; 
-    color: #ffffff;
-    width: 30%;
-    max-width: 500px;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
+
+  .add-modal-main {
+    flex-direction: column;
   }
-  
-  .add-tokens-modal-close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
+
+  .add-modal-coin-list,
+  .add-modal-coin-details {
+    width: 100%;
+    padding: 0;
     border: none;
-    font-size: 24px;
-    color: #ffffff;
-    cursor: pointer;
   }
-  
-  .add-tokens-modal-close-button:hover {
-    color: #ff0000;
+
+  .add-modal-coin-list {
+    margin-bottom: 20px;
   }
-  
+
+  .add-modal-search-input {
+    font-size: 14px;
+    padding: 8px 35px 8px 12px;
+  }
+
+  .add-modal-coin-logo {
+    width: 24px;
+    height: 24px;
+  }
+
+  .add-modal-tab {
+    padding: 8px 16px;
+    font-size: 12px;
+  }
+
+  .add-modal-coin-detail {
+    font-size: 14px;
+  }
+
+  .chart {
+    height: 120px;
+    font-size: 20px;
+  }
+}
