--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -110,3 +110,124 @@
 .circle-button.disconnected {
   background-color: red;
 }
+
+
+/* --------------------------------------- */
+
+.search-bar-container {
+  position: relative;
+  width: 300px;
+  margin-right: 40px;
+}
+
+.modal-search-bar-container {
+  width: 100%;
+  margin-right: 0;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #333;
+  font-size: 16px;
+  background-color: #1a1a1a;
+  color: #ffffff;
+  box-sizing: border-box;
+  padding-left: 40px;
+  position: relative;
+}
+
+.search-input::placeholder {
+  color: #c5c5c5;
+}
+
+.search-icon {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #c5c5c5;
+  font-size: 16px;
+}
+
+.suggestions {
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #1a1a1a;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 0;
+  margin-top: 5px;
+  list-style-type: none;
+  left: 0;
+  box-sizing: border-box;
+}
+
+.suggestions::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+.suggestions {
+  scrollbar-width: none;
+}
+
+.suggestions li {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  justify-content: space-between;
+  color: #ffffff;
+  background-color: #1a1a1a;
+  width: calc(100% - 15px);
+  margin: 1px 0 0 1px;
+}
+
+.suggestions li.active {
+  background-color: #333;
+}
+
+.coin-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.favorite-icon {
+  cursor: pointer;
+  margin-left: auto;
+  color: #ff9800;
+  font-size: 25px;
+}
+
+.scrollable {
+  max-width: 100%;
+  overflow-x: hidden;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.circle-button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: -40px; 
+  cursor: pointer;
+}
+
+.circle-button.connected {
+  background-color: green; 
+}
+
+.circle-button.disconnected {
+  background-color: red;
+}
