--- a/src/components/WalletConnector/WalletConnector.css
+++ b/src/components/WalletConnector/WalletConnector.css
@@ -1,17 +1,17 @@
-
 .connect-button,
 .disconnect-button {
   padding: 10px 20px;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 50%; /* Circular button */
   border: none;
   cursor: pointer;
-  position: relative;
   background-color: #4CAF50;
   color: white;
   min-height: 40px;
   min-width: 40px;
-  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .connect-button:hover {
@@ -23,52 +23,20 @@
 }
 
 .disconnect-button:hover {
-  background-color: #bf4024; 
+  background-color: #bf4024;
 }
 
-.hover-message {
-  visibility: hidden;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  padding: 8px;
-  position: absolute;
-  z-index: 1;
-  top: 100%; 
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0; 
-  transition: opacity 0.3s;
-  white-space: nowrap;
-}
-
-.connect-button:hover .hover-message,
-.disconnect-button:hover .hover-message {
-  visibility: visible;
-  opacity: 1;
-}
-
-
-.switch-button {
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-  background-color: #008CBA;
+.modal-wallet-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #4CAF50;
   color: white;
   border: none;
   border-radius: 5px;
-  margin-top: 10px;
-  margin-right: 10px;
+  cursor: pointer;
+  width: 100%;
 }
 
-.error-message {
-  color: red;
-  margin-top: 10px;
-}
-
-.network-buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
+.modal-wallet-button:hover {
+  background-color: #45a049;
 }
