--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,7 @@
 .App {
   font-family: Arial, sans-serif;
   color: #333;
-}
-
-header,
-.token-list,
-.watchlist,
-.wallet-connector,
-.account-balance,
-.search-bar,
-.token-detail,
-.home-page {
-  margin: 5px;
-}
-
-button {
-  cursor: pointer;
-}
-
-input {
-  padding: 5px;
+  height: 100%; 
+  display: flex;
+  flex-direction: column;
 }
