--- a/src/components/TokenHeader/TokenHeader.css
+++ b/src/components/TokenHeader/TokenHeader.css
@@ -1,11 +1,10 @@
-.token-header {
+.token-header-icon {
     display: flex;
     align-items: center;
-    gap: 15px;
-    margin-bottom: 20px;
+    gap: 5px;
   }
   
-  .token-icon {
-    width: 60px;
-    height: 60px;
+  .token-header-icon{
+    width: 30px;
+    height: 30px;
   }
