--- a/src/components/WatchList/WatchList.css
+++ b/src/components/WatchList/WatchList.css
@@ -32,9 +32,9 @@
 }
 
 .watchlist-table th {
-  color: #007bff;
+  color: #00AAFF;
   text-transform: uppercase;
-  border-bottom: 2px solid #007bff; 
+  border-bottom: 2px solid #00aaff; 
 }
 
 .watchlist-table td {
