--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,10 @@
 .homepage-container {
+  display: flex;
+  flex-direction: column;
   padding: 5px 40px;
   font-family: Arial, sans-serif;
+  min-height: 100vh; /* Full viewport height */
+  box-sizing: border-box;
 }
 
 .header {
@@ -59,6 +63,10 @@
 
 .tab-content {
   margin-top: 20px;
+  flex-grow: 1; /* Allows tab content to fill remaining space */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; /* Prevent scrollbars */
 }
 
 .empty-state {
@@ -126,5 +134,3 @@
 .add-token-button:hover {
   background-color: #45a049;
 }
-
-
