--- a/src/components/SendTransaction/SendTransaction.css
+++ b/src/components/SendTransaction/SendTransaction.css
@@ -55,6 +55,9 @@
   margin-bottom: 15px;
   font-size: 14px;
   word-wrap: break-word;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .qr-code-container {
@@ -67,12 +70,12 @@
 .copy-address-button {
   background-color: #00aaff;
   color: white;
-  padding: 10px 20px;
+  padding: 8px 16px;
   margin-top: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .copy-address-button:hover {
@@ -119,6 +122,16 @@
   color: #e60000;
   margin-top: 15px;
   word-wrap: break-word;
+}
+
+.gas-fee {
+  color: #cccccc;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.table-responsive {
+  overflow-x: auto;
 }
 
 /* Responsive Styles */
